--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-Description: Request for a new feature
+description: Request for a new feature
 title: "[Feature Request]: "
 labels: ["feature","request"]
 assignees:
